解决过程性打包，Base64包不存在问题